Fix project items dark mode toggle

--- a/static/styles/darkmodetoggle.css
+++ b/static/styles/darkmodetoggle.css
@@ -203,21 +203,48 @@ https://codepen.io/steve_walson/pen/oNprgre
 @keyframes fade-to-light {
   from {
     background-color: rgb(18, 18, 18);
-    color: rgb(255, 255, 255, 0.85);
+    color: rgb(249, 249, 249, 0.85);
   }
   to {
-    background-color: white;
-    color: black;
+    background-color: rgb(249, 249, 249, 0.85);
+    color: rgb(18, 18, 18);
   }
 }
 
 @keyframes fade-to-dark {
   from {
-    background-color: white;
-    color: black;
+    background-color: rgb(249, 249, 249, 0.85);
+    color: rgb(18, 18, 18);
   }
   to {
     background-color: rgb(18, 18, 18);
-    color: rgb(255, 255, 255, 0.85);
+    color: rgb(249, 249, 249, 0.85);
   }
 }
+
+@keyframes fade-to-light-project-item {
+  from {
+    background-color: rgb(18, 18, 18);
+    color: rgb(249, 249, 249, 0.85);
+    border: 2px solid rgb(249, 249, 249, 0.85);
+  }
+  to {
+    background-color: rgb(249, 249, 249, 0.85);
+    color: rgb(18, 18, 18);
+    border: 2px solid rgb(18, 18, 18);
+  }
+}
+
+@keyframes fade-to-dark-project-item {
+  from {
+    background-color: rgb(249, 249, 249, 0.85);
+    color: rgb(18, 18, 18);
+    border: 2px solid rgb(18, 18, 18);
+  }
+  to {
+    background-color: rgb(18, 18, 18);
+    color: rgb(249, 249, 249, 0.85);
+    border: 2px solid rgb(249, 249, 249, 0.85);
+  }
+}
+
